feat: implement Packet